# dynamics-solver

./: .gitignore  LEAME.md  LICENSE  README.md  main.py  pyproject.toml  setup.py
docs/: simulation_docs.md
dynamics_solver/: __init__.py  blocks.py  core.py  plot.py
ejemplos/: control_reactores.md  control_reactores.py  dyn-sel.md  simulacion_basica.py  simulacion_bloques_basicos.py  simulacion_bloques_dinamicos.py  simulacion_espacio_estados.py
tests/: test_blocks.py  test_integration.py  test_plot.py
